AddIns/Neo.AddIn.GTS/Api.cs

        [DllImport(DLL)]
        public static extern short GT_ArcXYCOverride2WN(Card card, short crd, int x, int y, double xCenter, double yCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcYZROverride2WN(Card card, short crd, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcYZCOverride2WN(Card card, short crd, int y, int z, double yCenter, double zCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcZXROverride2WN(Card card, short crd, int z, int x, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_ArcZXCOverride2WN(Card card, short crd, int z, int x, double zCenter, double xCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixXYRZWN(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixXYCZWN(Card card, short crd, int x, int y, int z, double xCenter, double yCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixYZRXWN(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixYZCXWN(Card card, short crd, int x, int y, int z, double yCenter, double zCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixZXRYWN(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixZXCYWN(Card card, short crd, int x, int y, int z, double zCenter, double xCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixXYRZOverride2WN(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixXYCZOverride2WN(Card card, short crd, int x, int y, int z, double xCenter, double yCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixYZRXOverride2WN(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixYZCXOverride2WN(Card card, short crd, int x, int y, int z, double yCenter, double zCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixZXRYOverride2WN(Card card, short crd, int x, int y, int z, double radius, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_HelixZXCYOverride2WN(Card card, short crd, int x, int y, int z, double zCenter, double xCenter, short circleDir, double synVel, double synAcc, double velEnd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufIO(Card card, short crd, ushort doType, ushort doMask, ushort doValue, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufEnableDoBitPulse(Card card, short crd, short doType, short doIndex, ushort highLevelTime, ushort lowLevelTime, int pulseNum, short firstLevel, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufDisableDoBitPulse(Card card, short crd, short doType, short doIndex, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufDelay(Card card, short crd, ushort delayTime, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufComparePulse(Card card, short crd, short level, short outputType, short time, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufDA(Card card, short crd, short chn, short daValue, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufLmtsOn(Card card, short crd, Axis axis, short limitType, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufLmtsOff(Card card, short crd, Axis axis, short limitType, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufSetStopIo(Card card, short crd, Axis axis, short stopType, short inputType, short inputIndex, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufMove(Card card, short crd, short moveAxis, int pos, double vel, double acc, short modal, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufGear(Card card, short crd, short gearAxis, int pos, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufGearPercent(Card card, short crd, short gearAxis, int pos, short accPercent, short decPercent, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufStopMotion(Card card, short crd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufSetVarValue(Card card, short crd, short pageId, out TVarInfo pVarInfo, double value, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufJumpNextSeg(Card card, short crd, Axis axis, short limitType, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufSynchPrfPos(Card card, short crd, short encoder, short profile, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufVirtualToActual(Card card, short crd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufSetLongVar(Card card, short crd, short index, int value, short fifo);
        [DllImport(DLL)]
        public static extern short GT_BufSetDoubleVar(Card card, short crd, short index, double value, short fifo);
        [DllImport(DLL)]
        public static extern short GT_CrdStart(Card card, short mask, short option);
        [DllImport(DLL)]
        public static extern short GT_CrdStartStep(Card card, short mask, short option);
        [DllImport(DLL)]
        public static extern short GT_CrdStepMode(Card card, short mask, short option);
        [DllImport(DLL)]
        public static extern short GT_SetOverride(Card card, short crd, double synVelRatio);
        [DllImport(DLL)]
        public static extern short GT_SetOverride2(Card card, short crd, double synVelRatio);
        [DllImport(DLL)]
        public static extern short GT_InitLookAhead(Card card, short crd, short fifo, double T, double accMax, short n, ref TCrdData pLookAheadBuf);
        [DllImport(DLL)]
        public static extern short GT_GetLookAheadSpace(Card card, short crd, out int pSpace, short fifo);
        [DllImport(DLL)]
        public static extern short GT_GetLookAheadSegCount(Card card, short crd, out int pSegCount, short fifo);
        [DllImport(DLL)]
        public static extern short GT_CrdClear(Card card, short crd, short fifo);
        [DllImport(DLL)]
        public static extern short GT_CrdStatus(Card card, short crd, out short pRun, out int pSegment, short fifo);
        [DllImport(DLL)]
        public static extern short GT_SetUserSegNum(Card card, short crd, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_GetUserSegNum(Card card, short crd, out int pSegment, short fifo);
        [DllImport(DLL)]
        public static extern short GT_GetUserSegNumWN(Card card, short crd, out int pSegment, short fifo);
        [DllImport(DLL)]
        public static extern short GT_GetRemainderSegNum(Card card, short crd, out int pSegment, short fifo);
        [DllImport(DLL)]
        public static extern short GT_SetCrdStopDec(Card card, short crd, double decSmoothStop, double decAbruptStop);
        [DllImport(DLL)]
        public static extern short GT_GetCrdStopDec(Card card, short crd, out double pDecSmoothStop, out double pDecAbruptStop);
        [DllImport(DLL)]
        public static extern short GT_SetCrdLmtStopMode(Card card, short crd, short lmtStopMode);
        [DllImport(DLL)]
        public static extern short GT_GetCrdLmtStopMode(Card card, short crd, out short pLmtStopMode);
        [DllImport(DLL)]
        public static extern short GT_GetUserTargetVel(Card card, short crd, out double pTargetVel);
        [DllImport(DLL)]
        public static extern short GT_GetSegTargetPos(Card card, short crd, out int pTargetPos);
        [DllImport(DLL)]
        public static extern short GT_GetCrdPos(Card card, short crd, out double pPos);
        [DllImport(DLL)]
        public static extern short GT_GetCrdVel(Card card, short crd, out double pSynVel);
        [DllImport(DLL)]
        public static extern short GT_SetCrdSingleMaxVel(Card card, short crd, ref double pMaxVel);
        [DllImport(DLL)]
        public static extern short GT_GetCrdSingleMaxVel(Card card, short crd, out double pMaxVel);
        [DllImport(DLL)]
        public static extern short GT_BufLaserOn(Card card, short crd, short fifo, short channel);
        [DllImport(DLL)]
        public static extern short GT_BufLaserOff(Card card, short crd, short fifo, short channel);
        [DllImport(DLL)]
        public static extern short GT_BufLaserPrfCmd(Card card, short crd, double laserPower, short fifo, short channel);
        [DllImport(DLL)]
        public static extern short GT_BufLaserFollowRatio(Card card, short crd, double ratio, double minPower, double maxPower, short fifo, short channel);
        [DllImport(DLL)]
        public static extern short GT_BufLaserFollowMode(Card card, short crd, short source, short fifo, short channel, double startPower);

        [DllImport(DLL)]
        public static extern short GT_PrfPvt(Card card, short profile);
        [DllImport(DLL)]
        public static extern short GT_SetPvtLoop(Card card, short profile, int loop);
        [DllImport(DLL)]
        public static extern short GT_GetPvtLoop(Card card, short profile, out int pLoopCount, out int pLoop);
        [DllImport(DLL)]
        public static extern short GT_PvtStatus(Card card, short profile, out short pTableId, out double pTime, short count);
        [DllImport(DLL)]
        public static extern short GT_PvtStart(Card card, int mask);
        [DllImport(DLL)]
        public static extern short GT_PvtTableSelect(Card card, short profile, short tableId);
